--- a/charts/elastic-cluster/charts/roles/templates/role2.yaml
+++ b/charts/elastic-cluster/charts/roles/templates/role2.yaml
@@ -1,20 +1,20 @@
-{{ if   .Values.roles.role6 }}
+{{ if   .Values.role2 }}
 apiVersion: elastic.elastic-operator/v1
 kind: ElasticRole
 metadata:
-  name: {{ .Release.Name}}-role-role6
+  name: {{ .Release.Name}}-role-role2
   namespace: {{ .Release.Namespace}}
 spec:
-  name: {{ .Release.Name}}-role-role6
+  name: role2
   cluster: {{ .Release.Name}}
   body: |
     {
       "cluster": ["all"],
       "indices": [
           {
-            "names": [ "role6-*" ],
+            "names": [ "index2-*" ],
             "privileges": ["all"]
           }
       ]
     }  
-{{ end}}
+{{ end }}
