--- a/charts/elastic-cluster/charts/kibanaspaces/templates/filebeat.yaml
+++ b/charts/elastic-cluster/charts/kibanaspaces/templates/filebeat.yaml
@@ -1,4 +1,4 @@
-{{ if  .Values.kibanaspaces.filebeat }}
+{{ if  .Values.filebeat }}
 apiVersion: elastic.elastic-operator/v1
 kind: KibanaSpace
 metadata:
