--- a/charts/elastic-cluster/charts/kibanaspaces/templates/metricbeat.yaml
+++ b/charts/elastic-cluster/charts/kibanaspaces/templates/metricbeat.yaml
@@ -1,4 +1,4 @@
-{{ if  .Values.kibanaspaces.metricbeat }}
+{{ if  .Values.metricbeat }}
 apiVersion: elastic.elastic-operator/v1
 kind: KibanaSpace
 metadata:
