--- a/charts/elastic-cluster/charts/kibanaspaces/templates/rally.yaml
+++ b/charts/elastic-cluster/charts/kibanaspaces/templates/rally.yaml
@@ -1,17 +1,17 @@
-{{ if  .Values.kibanaspaces.dummy }}
+{{ if  .Values.rally }}
 apiVersion: elastic.elastic-operator/v1
 kind: KibanaSpace
 metadata:
-  name: {{ .Release.Name}}-kibanaspace-dummy
+  name: {{ .Release.Name}}-kibanaspace-rally
   namespace: {{ .Release.Namespace}}
 spec:
-  name: dummy
+  name: rally
   cluster: {{ .Release.Name}}
   body: |
     {
-        "id": "dummy",
-        "name": "dummy",
-        "description": "my fancy dummy space",
+        "id": "rally",
+        "name": "rally",
+        "description": "my fancy rally space",
         "initials": "m1"
     }
 {{ end }}    
