--- a/charts/elastic-cluster/charts/kibanaspaces/templates/sprint.yaml
+++ b/charts/elastic-cluster/charts/kibanaspaces/templates/sprint.yaml
@@ -1,4 +1,4 @@
-{{ if  .Values.kibanaspaces.sprint }}
+{{ if  .Values.sprint }}
 apiVersion: elastic.elastic-operator/v1
 kind: KibanaSpace
 metadata:
