--- a/charts/elastic-cluster/charts/ingestpipelines/templates/helloworld.yaml
+++ b/charts/elastic-cluster/charts/ingestpipelines/templates/helloworld.yaml
@@ -1,11 +1,11 @@
-{{ if  .Values.ingestpipelines.sprint }}
+{{ if  .Values.helloworld }}
 apiVersion: elastic.elastic-operator/v1
 kind: IngestPipeline
 metadata:
-  name: {{ .Release.Name}}-ingestpipeline-sprint
+  name: {{ .Release.Name}}-ingestpipeline-helloworld
   namespace: {{ .Release.Namespace}}
 spec:
-  name: {{ .Release.Name}}-ingestpipeline-sprint
+  name: {{ .Release.Name}}-ingestpipeline-helloworld
   cluster: {{ .Release.Name}}
   body: |
           {
@@ -15,7 +15,7 @@ spec:
                 "set" : {
                   "description" : "My optional processor description , modified",
                   "field": "my-keyword-field",
-                  "value": "sprint"
+                  "value": "foohelloworld"
                 }
               }
             ]
