--- a/charts/elastic-cluster/charts/componenttemplates/templates/ecshost.yaml
+++ b/charts/elastic-cluster/charts/componenttemplates/templates/ecshost.yaml
@@ -1,4 +1,4 @@
-{{ if  .Values.componenttemplates.ecshost }}
+{{ if  .Values.ecshost }}
 apiVersion: elastic.elastic-operator/v1
 kind: ComponentTemplate
 metadata:
