--- a/charts/elastic-cluster/charts/componenttemplates/templates/mycomponent1.yaml
+++ b/charts/elastic-cluster/charts/componenttemplates/templates/mycomponent1.yaml
@@ -1,4 +1,4 @@
-{{ if  .Values.componenttemplates.mycomponent1 }}
+{{ if  .Values.mycomponent1 }}
 apiVersion: elastic.elastic-operator/v1
 kind: ComponentTemplate
 metadata:
