--- a/charts/elastic-cluster/charts/componenttemplates/templates/ecs3.yaml
+++ b/charts/elastic-cluster/charts/componenttemplates/templates/ecs3.yaml
@@ -1,18 +1,18 @@
-{{ if  .Values.componenttemplates.ecs }}
+{{ if  .Values.ecs3 }}
 apiVersion: elastic.elastic-operator/v1
 kind: ComponentTemplate
 metadata:
-  name: {{ .Release.Name}}-componenttemplate-ecs
+  name: {{ .Release.Name}}-componenttemplate-ecs3
   namespace: {{ .Release.Namespace}}
 spec:
-  name: ecs
+  name: ecs3
   cluster: {{ .Release.Name}}
   body: |
         {
           "template": {
             "mappings": {
               "properties": {
-                "event": {
+                "ip": {
                   "properties": {
                     "category": {
                       "type" : "keyword"
