--- a/charts/elastic-cluster/charts/legacyindextemplates/templates/winlogbeat.yaml
+++ b/charts/elastic-cluster/charts/legacyindextemplates/templates/winlogbeat.yaml
@@ -1,4 +1,4 @@
-{{ if  .Values.legacyindextemplates.winlogbeat }}
+{{ if  .Values.winlogbeat }}
 apiVersion: elastic.elastic-operator/v1
 kind: LegacyIndexTemplate
 metadata:
