--- a/charts/elastic-cluster/charts/legacyindextemplates/templates/myindextemplate.yaml
+++ b/charts/elastic-cluster/charts/legacyindextemplates/templates/myindextemplate.yaml
@@ -1,21 +1,21 @@
-{{ if  .Values.legacyindextemplates.role6 }}
+{{ if  .Values.myindextemplate }}
 apiVersion: elastic.elastic-operator/v1
 kind: LegacyIndexTemplate
 metadata:
-  name: {{ .Release.Name}}-legacyindextemplate-role6
+  name: {{ .Release.Name}}-legacyindextemplate-myindextemplate
   namespace: {{ .Release.Namespace}}
 spec:
-  name: role6
+  name: myindextemplate
   cluster: {{ .Release.Name}}
   body: |
             {
-              "index_patterns": ["role6-*"],
+              "index_patterns": ["te*", "bar*"],
               "settings": {
                 "number_of_shards": 1
               },
               "mappings": {
                 "_source": {
-                  "enabled": true
+                  "enabled": false
                 },
                 "properties": {
                   "host_name": {
