--- a/charts/elastic-cluster/charts/watchers/templates/watch2.yaml
+++ b/charts/elastic-cluster/charts/watchers/templates/watch2.yaml
@@ -1,4 +1,4 @@
-{{ if   .Values.watchers.watcher2 }}
+{{ if   .Values.watcher2 }}
 apiVersion: elastic.elastic-operator/v1
 kind: Watcher
 metadata:
