scripts and rolemappings

--- a/charts/elastic-cluster/charts/rolemappings/templates/mapping1.yaml
+++ b/charts/elastic-cluster/charts/rolemappings/templates/mapping1.yaml
@@ -1,4 +1,4 @@
-{{ if  .Values.rolemappings.mapping1 }}
+{{ if  .Values.mapping1 }}
 apiVersion: elastic.elastic-operator/v1
 kind: RoleMapping
 metadata:
