--- a/charts/elastic-cluster/charts/rolemappings/templates/oidc.yaml
+++ b/charts/elastic-cluster/charts/rolemappings/templates/oidc.yaml
@@ -1,4 +1,4 @@
-{{ if  .Values.rolemappings.oidc1 }}
+{{ if  .Values.oidc1 }}
 apiVersion: elastic.elastic-operator/v1
 kind: RoleMapping
 metadata:
