--- a/charts/elastic-cluster/charts/transforms/templates/transform1.yaml
+++ b/charts/elastic-cluster/charts/transforms/templates/transform1.yaml
@@ -1,4 +1,4 @@
-{{ if   .Values.transforms.transform1 }}
+{{ if   .Values.transform1 }}
 apiVersion: elastic.elastic-operator/v1
 kind: Transform
 metadata:
