--- a/charts/elastic-cluster/charts/indextemplates/templates/api.yaml
+++ b/charts/elastic-cluster/charts/indextemplates/templates/api.yaml
@@ -1,4 +1,4 @@
-{{ if  .Values.indextemplates.api }}
+{{ if  .Values.api }}
 apiVersion: elastic.elastic-operator/v1
 kind: IndexTemplate
 metadata:
