--- a/clusters/dev/cluster14/release.yaml
+++ b/clusters/dev/cluster14/release.yaml
@@ -9,6 +9,7 @@ spec:
   chart:
     spec:
       chart: ./charts/elastic-cluster
+      reconcileStrategy: Revision
       sourceRef:
         kind: GitRepository
         name: flux-elastic
