--- a/clusters/dev/cluster13/release.yaml
+++ b/clusters/dev/cluster13/release.yaml
@@ -1,10 +1,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata: 
-  name: cluster14
+  name: cluster13
   namespace: observability
 spec:
-  releaseName: cluster14
+  releaseName: cluster13
   targetNamespace: observability
   chart:
     spec:
@@ -20,7 +20,7 @@ spec:
     cluster:
 
       elastic:
-        version: 8.2.0
+        version: 8.1.2
 
       master:
         nodeset: 
@@ -34,6 +34,14 @@ spec:
         nodeset: 
           count: 1
           
+      datawarm:
+        nodeset: 
+          count: 1
+
+      datafrozen:
+        nodeset: 
+          count: 1
+
       ingest:
         nodeset: 
           count: 1
