--- a/clusters/dev/cluster14/release.yaml
+++ b/clusters/dev/cluster14/release.yaml
@@ -1,10 +1,10 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata: 
-  name: cluster13
+  name: cluster14
   namespace: observability
 spec:
-  releaseName: cluster13
+  releaseName: cluster14
   targetNamespace: observability
   chart:
     spec:
@@ -20,11 +20,11 @@ spec:
     cluster:
 
       elastic:
-        version: 8.2.0
+        version: 8.1.1
 
       master:
         nodeset: 
-          count: 1    
+          count: 3    
 
       data:
         nodeset: 
@@ -36,11 +36,15 @@ spec:
           
       datawarm:
         nodeset: 
-          count: 1
+          count: 0
+
+      datacold:
+        nodeset: 
+          count: 0
 
       datafrozen:
         nodeset: 
-          count: 1
+          count: 2
 
       ingest:
         nodeset: 
