--- a/charts/elasticoperator/templates/deployment.yaml
+++ b/charts/elasticoperator/templates/deployment.yaml
@@ -19,8 +19,8 @@ spec:
       serviceAccountName: {{ .Release.Name}}-{{ .Values.Operator.Sa }}
       containers:
       - name: {{ .Release.Name}}
-        imagePullPolicy: IfNotPresent
-        image: deckkh/elasticcontroller:v1.2.56
+#        imagePullPolicy: IfNotPresent
+        image: elasticcontroller:v1.2.57
         ports:
         - containerPort: {{ .Values.ConfigMap.healthPort}}
           name: healthport
