--- a/clusters/dev/elasticoperator/releases.yaml
+++ b/clusters/dev/elasticoperator/releases.yaml
@@ -9,6 +9,7 @@ spec:
   chart:
     spec:
       chart: ./charts/elasticoperator
+      reconcileStrategy: Revision
       sourceRef:
         kind: GitRepository
         name: flux-elastic
