--- a/charts/elasticoperator/templates/deployment.yaml
+++ b/charts/elasticoperator/templates/deployment.yaml
@@ -21,6 +21,13 @@ spec:
       - name: {{ .Release.Name}}
 #        imagePullPolicy: IfNotPresent
         image: elasticcontroller:v1.2.59
+        resources:
+          limits:
+            memory: {{ .limits.memory}}
+            cpu: {{ .limits.cpu}}
+          requests:
+            memory: {{ .requests.memory}}
+            cpu: {{ .requests.cpu}}          
         ports:
         - containerPort: {{ .Values.ConfigMap.healthPort}}
           name: healthport
@@ -40,7 +47,6 @@ spec:
           initialDelaySeconds: 30
           periodSeconds: 30         
 
-
         env:
         # Define the environment variable
         - name: NAMESPACE
@@ -50,5 +56,3 @@ spec:
         - name: HEALTHPORT
           value: "{{ .Values.ConfigMap.healthPort}}"
 
-      imagePullSecrets:
-      - name: regcred
