--- a/charts/elasticoperator/templates/rolebinding-tenant.yaml
+++ b/charts/elasticoperator/templates/rolebinding-tenant.yaml
@@ -11,4 +11,4 @@ subjects:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: {{ .Release.Name}}-{{ .Values.Operator.Role }}
+  name: {{ .Release.Name}}-tenant-{{ .Values.Operator.Role }}
