--- a/charts/elasticoperator/templates/role-tenant.yaml
+++ b/charts/elasticoperator/templates/role-tenant.yaml
@@ -3,7 +3,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: {{ .Release.Name}}-tenant-{{ .Values.Operator.Role }}
-  namespace: {{ .Release.Namespace }}
+  namespace: {{ .Values.ConfigMap.Namespace}}
 rules:
   - apiGroups:
         - ""
