--- a/clusters/dev/cluster14/release.yaml
+++ b/clusters/dev/cluster14/release.yaml
@@ -23,6 +23,8 @@ spec:
         config: 
           version: 8.2.2
           zoneawareness: false
+          oidc:
+            enabled: false
           tolerations:
             key: myapp
             value: worker
