--- a/charts/elastic-cluster/charts/cluster/values.yaml
+++ b/charts/elastic-cluster/charts/cluster/values.yaml
@@ -18,7 +18,13 @@ kibana:
     nodeselector:
       key: "tier"
       value:  "application"   
-
+    limits: 
+      memory: 2Gi
+      cpu: 2
+    requests: 
+      memory: 1Gi
+      cpu: 1
+      
 elastic:
   config: 
     version: 8.1.0
