--- a/charts/elastic-cluster/charts/cluster/templates/metricbeat-role.yaml
+++ b/charts/elastic-cluster/charts/cluster/templates/metricbeat-role.yaml
@@ -7,7 +7,9 @@ metadata:
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources:
+  - namespaces
   - pods
+  - nodes
   verbs:
   - get
   - watch
