--- a/charts/elastic-cluster/charts/cluster/templates/metricbeat-clusterrole.yaml
+++ b/charts/elastic-cluster/charts/cluster/templates/metricbeat-clusterrole.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ .Release.Name}}-metricbeat
+  name: metricbeat
 rules:
 - apiGroups: [""] # "" indicates the core API group
   resources:
