--- a/charts/elastic-cluster/charts/cluster/templates/metricbeat-rolebinding.yaml
+++ b/charts/elastic-cluster/charts/cluster/templates/metricbeat-rolebinding.yaml
@@ -1,14 +1,15 @@
 {{ if .Values.elastic.config.monitoring.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+kind: RoleBinding
 metadata:
   name: {{ .Release.Name}}-metricbeat
+  namespace: {{ .Release.Namespace}}
 subjects:
 - kind: ServiceAccount
   name: {{ .Release.Name}}-metricbeat
   namespace: {{ .Release.Namespace}}
 roleRef:
   kind: ClusterRole
-  name: {{ .Release.Name}}-metricbeat
+  name: metricbeat
   apiGroup: rbac.authorization.k8s.io
 {{ end }}
