--- a/charts/elastic-cluster/charts/cluster/templates/metricbeat-clusterrolebinding.yaml
+++ b/charts/elastic-cluster/charts/cluster/templates/metricbeat-clusterrolebinding.yaml
@@ -1,6 +1,6 @@
 {{ if .Values.elastic.config.monitoring.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
   name: {{ .Release.Name}}-metricbeat
   namespace: {{ .Release.Namespace}}
