--- a/charts/elasticoperator/templates/role-tenant.yaml
+++ b/charts/elasticoperator/templates/role-tenant.yaml
@@ -36,11 +36,11 @@ rules:
       #- replicationcontrollers
       #- serviceaccounts
       #- services
-      # - secrets
-      # - indextemplates
-      # - kibanaspaces
-      # - ilms
-      # - slms
+      - secrets
+      - indextemplates
+      - kibanaspaces
+      - ilms
+      - slms
       - elasticroles
       - rolemappings
       - clustersettings
