--- a/charts/elasticoperator/templates/clusterrolebinding-operator.yaml
+++ b/charts/elasticoperator/templates/clusterrolebinding-operator.yaml
@@ -1,14 +1,13 @@
 ---
 apiVersion: rbac.authorization.k8s.io/v1
-kind: RoleBinding
+kind: ClusterRoleBinding
 metadata:
-  name: {{ .Release.Name}}-tenant
-  namespace: {{ .Values.ConfigMap.Namespace}}
+  name: {{ .Release.Name}}-operator
 subjects:
 - namespace: {{ .Release.Namespace}} 
   kind: ServiceAccount
   name: {{ .Release.Name}}-{{ .Values.Operator.Sa}}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
-  kind: Role
-  name: {{ .Release.Name}}-tenant-{{ .Values.Operator.Role }}
+  kind: ClusterRole
+  name: {{ .Release.Name}}-operator-{{ .Values.Operator.Role }}
