added namespaces to role

--- a/charts/elasticoperator/templates/clusterrole-operator.yaml
+++ b/charts/elasticoperator/templates/clusterrole-operator.yaml
@@ -37,6 +37,7 @@ rules:
       #- services
       - configmaps
       - secrets
+      - namespaces
       - indextemplates
       - kibanaspaces
       - ilms
