--- a/charts/elastic-cluster/charts/cluster/values.yaml
+++ b/charts/elastic-cluster/charts/cluster/values.yaml
@@ -4,6 +4,10 @@ production:
   enabled: false
 
 
+elasticcontroller:
+  namespace: system
+  name: iitech-elasticoperator
+
 kibana:
   config:
     count: 1
