--- a/charts/elastic-cluster/charts/cluster/values.yaml
+++ b/charts/elastic-cluster/charts/cluster/values.yaml
@@ -33,6 +33,7 @@ elastic:
   config: 
     version: 8.1.0
     zoneawareness: true
+    affinity: false
     oidc:
       enabled: true
       name: myazure
