--- a/charts/elastic-cluster/charts/cluster/templates/elastic-networkpolicy.yaml
+++ b/charts/elastic-cluster/charts/cluster/templates/elastic-networkpolicy.yaml
@@ -10,6 +10,19 @@ spec:
       elasticsearch.k8s.elastic.co/cluster-name:  {{ .Release.Name}} 
   policyTypes:
     - Ingress
+    - Egress
+
+  egress:
+  - ports:
+    - port: 9300
+      protocol: TCP
+    to:
+    - podSelector:
+        matchLabels:
+          elasticsearch.k8s.elastic.co/cluster-name:  {{ .Release.Name}} 
+  - ports:
+    - port: 53
+      protocol: UDP     
   ingress:
     - from:
         - namespaceSelector:
@@ -21,3 +34,10 @@ spec:
       ports:
       - protocol: TCP
         port: 9200
+    - from:
+      - podSelector:
+          matchLabels:
+            elasticsearch.k8s.elastic.co/cluster-name:  {{ .Release.Name}} 
+      ports:
+      - port: 9300
+        protocol: TCP  
