--- a/infrastructure/crds/elasticcontroller-1.0.2.yaml
+++ b/infrastructure/crds/elasticcontroller-1.0.2.yaml
@@ -616,7 +616,7 @@ spec:
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: syncsecret.elastic.elastic-operator
+  name: syncsecrets.elastic.elastic-operator
 spec:
   group: elastic.elastic-operator
   scope: Namespaced
