--- a/infrastructure/crds/elasticcontroller-1.0.2.yaml
+++ b/infrastructure/crds/elasticcontroller-1.0.2.yaml
@@ -638,6 +638,8 @@ spec:
             spec:
               type: object
               properties:
+                cluster:
+                  type: string
                 keyvaultname:
                   type: string
                 keyvaultsecret:
